# QueueSend

./: .editorconfig  .gitignore  CHANGELOG.md  DEBUG_LOG.md  LICENSE  Queue_repo_contract.md  Queue_tdd.md  README.md  past_chat_cursor_dpi.md  pyproject.toml  跨平台roi变化驱动自动化工具_prd.md  跨平台roi变化驱动自动化工具_可执行规格（executable_spec）.md  跨平台roi变化驱动自动化工具_开发约束与交付清单（repo_contract）.md  跨平台roi变化驱动自动化工具_技术设计（tdd）.md  跨平台roi变化驱动自动化工具_测试计划与用例（test_plan）.md
.olddocs/: Queue_executable_spec.md  Queue_prd.md  Queue_test_plan.md
app/: __init__.py  controller.py  main.py
app/assets/: __init__.py
app/core/: __init__.py  capture.py  constants.py  diff.py  engine.py  logging.py  model.py
app/core/os_adapter/: __init__.py  input_inject.py  mac_permissions.py  validation.py  win_dpi.py
app/ui/: __init__.py  calibration_overlay.py  main_window.py  message_editor.py  run_panel.py  widgets.py
docs/: Queue_executable_spec.md  Queue_prd.md  Queue_repo_contract.md  Queue_tdd.md  Queue_test_plan.md
scripts/: .gitkeep  build_macos.sh  build_windows.ps1
tests/: __init__.py  test_calibration_threshold.py  test_circular_roi.py  test_coordinate_validation.py  test_diff.py  test_hold_hits_reset.py  test_mask.py  test_message_filter.py  test_state_machine.py
